Ed's changes to stamped now available

--- a/sites/stamped.com/bin/alerts/templates/email_now_available.html
+++ b/sites/stamped.com/bin/alerts/templates/email_now_available.html
@@ -34,6 +34,12 @@
                             <tr>
                                 <td align="center" bgcolor="white">
                                     <table width="600" cellpadding="0" cellspacing="0">
+                                         <tr>
+                                            <td width="600" height="70" align="center" valign="middle">
+                                                <img src="http://static.stamped.com/assets/img/email-title-launch.gif" width="247" height="27" alt="We launched!">
+                                            </td>
+                                        </tr>
+                                        
                                         <tr>
                                             <td width="600" height="36" align="center" valign="bottom" style="color:#595959;font-family:Helvetica,Arial;font-size:16px;line-height:26px;">
                                                 We really appreciate your early interest and are excited to let you know that <br \>Stamped is now available in the <a href="http://www.stamped.com/download" style="text-decoration:none;font-weight:bold;color:#377AD9;">App Store</a>. Happy stamping!
@@ -46,15 +52,22 @@
                                             </td>
                                         </tr>
                                         
+                                        
+                                        
                                         <tr>
-                                            <td width="600" height="40" align="center" valign="top" style="color:#595959;font-family:Helvetica,Arial,sans-serif;font-size:12px;">
-                                                Learn more at <a href="http://www.stamped.com" style="text-decoration:none;font-weight:bold;color:#377AD9;">stamped.com</a>
+                                            <td width="600" height="540" align="center" valign="middle">
+                                                <img src="http://static.stamped.com/assets/img/email-img-phones.jpg" width="580" height="520" alt="iPhones">
                                             </td>
                                         </tr>
                                         
                                         <tr>
-                                            <td width="600" height="540" align="center" valign="middle">
-                                                <img src="http://static.stamped.com/assets/img/email-img-phones.png" width="580" height="520" alt="iPhones">
+                                            <td width="600" height="40" align="center" valign="top" style="color:#595959;font-family:Helvetica,Arial,sans-serif;font-size:16px;">
+                                                Watch the video and learn more at <a href="http://www.stamped.com" style="text-decoration:none;font-weight:bold;color:#377AD9;">stamped.com</a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td width="600" height="120" align="center" valign="middle">
+                                                <a href="http://www.stamped.com"><img src="http://static.stamped.com/assets/img/email-img-video.jpg" width="236" height="126" alt="Watch the video"></a><br \><br \><br \>
                                             </td>
                                         </tr>
                                                                               
