--- a/sites/stamped.com/bin/www/templates/password-forgot.html
+++ b/sites/stamped.com/bin/www/templates/password-forgot.html
@@ -13,14 +13,14 @@
         <meta name="viewport" content="width=640">
         
         <!-- Style -->
-        <link rel="stylesheet" href="http://zomgco.com/tramped/css/normalize.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="http://zomgco.com/tramped/css/style.css" type="text/css" media="screen" />
-        <link rel="shortcut icon" href="http://zomgco.com/tramped/favicon.ico"/>
-        <link rel="apple-touch-icon" href="http://zomgco.com/tramped/apple-touch-icon.png"/>
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/styles-temp.css" type="text/css" media="screen" />
+        <link rel="shortcut icon" href="http://static.stamped.com/assets/img/favicon.ico"/>
+        <link rel="apple-touch-icon" href="http://static.stamped.com/assets/img/apple-touch-icon.png"/>
 
         <!-- Magic -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-        <script type="text/javascript" src="http://zomgco.com/tramped/js/function.js"></script>
+        <script type="text/javascript" src="http://static.stamped.com/assets/js/function.js"></script>
         
         <style>
         .wrap { width:620px; background:none; }
