--- a/sites/stamped.com/bin/www/templates/licenses-mobile.html
+++ b/sites/stamped.com/bin/www/templates/licenses-mobile.html
@@ -55,5 +55,37 @@ font-weight: normal;
 <br>Licensed under Creative Commons. </p>
 </div>
 
+<div>
+<strong>GTMOauth</strong><br><a href="http://code.google.com/p/gtm-oauth/">http://code.google.com/p/gtm-oauth/</a>
+<p>Copyright (c) 2010 Google Inc.
+<br>Licensed under the Apache License, Version 2.0</p>
+</div>
+
+<div>
+<strong>Facebook API</strong><br><a href="http://developers.facebook.com/docs/reference/api/">http://developers.facebook.com/docs/reference/api/</a>
+<p>Copyright 2010 Facebook
+<br>Licensed under the Apache License, Version 2.0</p>
+</div>
+
+<div>
+<strong>TTTAttributedLabel</strong><br><a href="https://github.com/mattt/TTTAttributedLabel">https://github.com/mattt/TTTAttributedLabel</a>
+<p>Copyright (c) 2011 Mattt Thompson (<a href="http://mattt.me">http://mattt.me</a>)
+<br>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+ <br>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+<br>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
+</div>
+
+<div>
+<strong>OHAttributedLabel</strong><br><a href="https://github.com/AliSoftware/OHAttributedLabel">https://github.com/AliSoftware/OHAttributedLabel</a>
+<p>Copyright (c) 2010 Olivier Halligon
+<br>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+<br>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+<br>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
+</div>
+
+
 </body>
 </html>
+
+
+
