Adding /download link to download button, swapping image assets, and adding video

--- a/sites/stamped.com/bin/alerts/templates/email_invite.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_invite.html.j2
@@ -42,7 +42,7 @@
                                         
                                         <tr>
                                             <td width="600" height="120" align="center" valign="middle">
-                                                <a href="http://www.stamped.com"><img src="http://static.stamped.com/assets/img/email-button-download.png" width="245" height="82" alt="Free Download - Available in the App Store"></a>
+                                                <a href="http://www.stamped.com/download"><img src="http://static.stamped.com/assets/img/email-button-download.png" width="245" height="82" alt="Free Download - Available in the App Store"></a>
                                             </td>
                                         </tr>
                                         
@@ -54,10 +54,21 @@
                                         </tr>
                                         
                                         <tr>
-                                            <td width="600" height="540" align="center" valign="middle">
-                                                <img src="http://static.stamped.com/assets/img/email-img-phones.png" width="580" height="520" alt="iPhones">
+                                            <td width="650" height="544" align="center" valign="middle">
+                                                <img src="http://static.stamped.com/assets/img/email-img-phones.jpg" width="650" height="544" alt="iPhones">
                                             </td>
                                         </tr>
+                                        <tr>
+                                            <td width="600" height="40" align="center" valign="top" style="color:#595959;font-family:Helvetica,Arial,sans-serif;font-size:16px;">
+                                                Watch the video and learn more at <a href="http://www.stamped.com" style="text-decoration:none;font-weight:bold;color:#377AD9;">stamped.com</a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td width="600" height="120" align="center" valign="middle">
+                                                <a href="http://www.stamped.com"><img src="http://static.stamped.com/assets/img/email-img-video.jpg" width="236" height="126" alt="Watch the video"></a><br \><br \><br \>
+                                            </td>
+                                        </tr>
+
                                                                               
                                     </table>
                                 
