Swapped out ed's profile image for Jenny's in welcome email (per ed's instructions)

--- a/sites/stamped.com/bin/alerts/templates/email_welcome.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_welcome.html.j2
@@ -60,7 +60,7 @@
                                         
                                         <tr>
                                             <td width="600" height="410" align="center" valign="middle">
-                                                <img src="http://static.stamped.com/assets/img/email-img-profile.png" width="550" height="324" alt="Profile Detail">
+                                                <img src="http://static.stamped.com/assets/img/email-img-profile.jpg" width="550" height="324" alt="Profile Detail">
                                             </td>
                                         </tr>
                                                                               
