--- a/sites/stamped.com/bin/www/templates/licenses-mobile.html
+++ b/sites/stamped.com/bin/www/templates/licenses-mobile.html
@@ -27,7 +27,7 @@ font-weight: normal;
 </head>
 <body>
 
-<h2>LICENSES</h2>
+<h2>LICENSES & RESOURCES</h2>
 
 <p>The following resources are used by Stamped:</p>
 
@@ -83,6 +83,25 @@ font-weight: normal;
 <br>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 </div>
 
+<div>
+<strong>Amazon API</strong><br><a href="https://affiliate-program.amazon.com/gp/advertising/api/detail/agreement.html">https://affiliate-program.amazon.com/gp/advertising/api/detail/agreement.html</a>
+<p>CERTAIN CONTENT THAT APPEARS IN THIS APPLICATION COMES FROM AMAZON SERVICES LLC. THIS CONTENT IS PROVIDED 'AS IS' AND IS SUBJECT TO CHANGE OR REMOVAL AT ANY TIME.</p>
+</div>
+
+<div>
+<strong>Google Maps APIs</strong><br><a href='http://code.google.com/apis/maps/terms.html'>http://code.google.com/apis/maps/terms.html</a>
+<p>Location data is provided by Google Maps APIs. View the <a href='http://code.google.com/apis/maps/terms.html'>Google Maps/Google Earth APIs Terms of Service</a> for more information.</p>
+</div>
+
+<div>
+<strong>TVDB API</strong><br><a href='http://thetvdb.com/'>http://thetvdb.com/</a>
+<p>TVDB is licensed under a <a href='http://creativecommons.org/licenses/by/3.0/us/'>Creative Commons Attribution 3.0 United States License</a>.</p>
+</div>
+
+<div>
+<strong>Additional Third-Party Search APIs</strong>
+<p>Additional search and entity data is provided by OpenTable, Fandango and Apple iTunes</p>
+</div>
 
 </body>
 </html>
