--- a/sites/stamped.com/bin/www/templates/sdetail-mobile.html
+++ b/sites/stamped.com/bin/www/templates/sdetail-mobile.html
@@ -1,4 +1,4 @@
-<!doctype html> 
+<!DOCTYPE html> 
 <html lang="en" dir="ltr"> 
     <head> 
         <meta charset="utf-8"> 
@@ -50,7 +50,7 @@
             <div class="wrap">
                 <a href="/" class="brand replaced">Stamped</a>
                 <div class="message">
-                    <p><span class="user">{{ user.screen_name }}</span> is using a private beta of Stamped, a new way to put your stamp of approval on the world.</p>
+                    <p><span class="user">{{ user.screen_name }}</span> is using Stamped, a new way to put your stamp of approval on the world.</p>
                 </div>
                 <div class="card">
                     <div class="top-wave"></div>
@@ -99,21 +99,12 @@
                     <div class="bottom-wave"></div>
                 </div>
                 <div class="footer">
-                    <div class="coming-soon replaced">Coming soon to the App Store</div>
-                    <div class="signup">
-                        <p>Sign up for launch:</p>
-                        <form action="http://stamped.createsend.com/t/r/s/fqjrk/" method="POST" id="subForm">
-                            <input autocomplete="off" name="cm-fqjrk-fqjrk" id="fqjrk-fqjrk" type="text" rel="Email address"/>
-                            <button type="submit" class="replaced">Submit</button>
-                        </form>
-                    </div>
-                    <p class="thanks replaced">Whoa. Thanks!</p>
+                    <div class="available replaced">Available on the App Store</div>
                     <div class="more">
                         <span>&copy;2011 Stamped Inc.</span>
                     </div> 
                 </div>
             </div> <!-- /wrap -->
-            
         </div> <!-- /entity -->
         <script type="text/javascript">
             stamped.init();
