--- a/sites/stamped.com/bin/www/templates/sdetail.html
+++ b/sites/stamped.com/bin/www/templates/sdetail.html
@@ -1,10 +1,10 @@
-<!doctype html> 
+<!DOCTYPE html> 
 <html lang="en" dir="ltr"> 
     <head> 
         <meta charset="utf-8"> 
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         
-        <title>Stamped</title> 
+        <title>Stamped</title>
         
         <meta name="description" content="Put your stamp of approval on the world."> 
         <meta name="author" content="Stamped, Inc."> 
@@ -15,8 +15,8 @@
         <!-- Style --> 
         <link href="http://cloud.webtype.com/css/98498264-8838-4e2c-a0a6-d68fc97fdaf3.css" rel="stylesheet" type="text/css" /> 
         <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" /> 
-        <link rel="stylesheet" href="http://static.stamped.com/assets/css/styles.css" type="text/css" media="screen" /> 
-        
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/styles.css" type="text/css" media="screen" />
+
         <link rel="shortcut icon" href="http://static.stamped.com/assets/img/favicon.ico"/> 
         <link rel="apple-touch-icon" href="http://static.stamped.com/assets/img/apple-touch-icon.png"/> 
         <style type="text/css">
@@ -42,31 +42,21 @@
         </style>
  
         <!-- Magic --> 
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> 
-        <script type="text/javascript" src="http://static.stamped.com/assets/js/function.js"></script> 
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script type="text/javascript" src="http://static.stamped.com/assets/js/function.js"></script>
     </head> 
     <body> 
         <div id="entity" class="flood"> 
-            <div class="header"> 
-                <div class="inner"> 
-                    <div class="container"> 
-                        <a href="#" class="hide">Hide</a> 
-                    </div> 
-                    <div class="signup"> 
-                        <form action="http://stamped.createsend.com/t/r/s/fqjrk/" method="POST" id="subForm"> 
-                            <input autocomplete="off" name="cm-fqjrk-fqjrk" id="fqjrk-fqjrk" type="text" rel="Email address"/> 
-                            <button type="submit" class="replaced">Submit</button> 
-                        </form> 
-                    </div> 
-                    <p class="thanks replaced">Whoa. Thanks!</p> 
+            <div class="header">
+                <div class="inner">
                     <div class="message"> 
-                        <p><span class="user">{{ user.screen_name }}</span> is using a private beta of Stamped, a new way to put your stamp of approval on the world. <a href="#" class="signup-toggle">Sign up for launch</a>.</p> 
+                        <p><span class="user">{{ user.screen_name }}</span> is using Stamped, a new way to put your stamp of approval on the world. <a href="http://stamped.com/download" class="signup-toggle">Download the app</a>.</p>
                     </div> 
                 </div> 
-            </div> 
+            </div>
             <div class="wrap"> 
                 <a href="/" class="brand replaced">Stamped</a>
-                <div class="coming-soon replaced">Coming soon to the App Store</div> 
+                <div class="available replaced">Available on the App Store</div> 
                 <div class="card"> 
                     <div class="top-wave"></div> 
                     <div class="inner"> 
@@ -120,7 +110,7 @@
             </div> <!-- /wrap --> 
             
         </div> <!-- /entity --> 
-        <script type="text/javascript"> 
+        <script type="text/javascript">
             stamped.init();
         </script> 
     </body> 
