--- a/sites/stamped.com/bin/www/templates/sdetail-mobile.html
+++ b/sites/stamped.com/bin/www/templates/sdetail-mobile.html
@@ -15,7 +15,7 @@
         <!-- Style --> 
         <link href="http://cloud.webtype.com/css/98498264-8838-4e2c-a0a6-d68fc97fdaf3.css" rel="stylesheet" type="text/css" /> 
         <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" /> 
-        <link rel="stylesheet" href="http://static.stamped.com/assets/css/styles.css" type="text/css" media="screen" /> 
+        <link rel="stylesheet" href="http://stamped.com.static.images.s3.amazonaws.com/assets/css/screen.css" type="text/css" media="screen" /> 
         
         <link rel="shortcut icon" href="http://static.stamped.com/assets/img/favicon.ico"/> 
         <link rel="apple-touch-icon" href="http://static.stamped.com/assets/img/apple-touch-icon.png"/> 
@@ -43,7 +43,7 @@
  
         <!-- Magic --> 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> 
-        <script type="text/javascript" src="http://static.stamped.com/assets/js/function.js"></script> 
+        <script type="text/javascript" src="http://stamped.com.static.images.s3.amazonaws.com/assets/js/magic.js"></script> 
     </head> 
     <body>
         <div id="mobile-entity" class="flood">
