Various fixes to templates: copy change, removing "learn more" link under download button on invite email, added alerts URL for changing preferences (still needs token template variable)

--- a/sites/stamped.com/bin/alerts/templates/email_welcome.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_welcome.html.j2
@@ -42,7 +42,7 @@
                                         
                                         <tr>
                                             <td width="600" height="80" align="center" valign="middle" style="color:#595959;font-family:Helvetica,Arial;font-size:16px;line-height:26px;">
-                                                Thanks for joining! We hope you enjoy using our app to put your stamp <br>of approval on the world. Save this email so you don't forget your username.
+                                                Thanks for joining! We hope you like putting your stamp of approval on the <br />world in a simple, fast way. Save this email so you don't forget your username.
                                             </td>
                                         </tr>
                                         
