--- a/sites/stamped.com/bin/alerts/templates/email_follower.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_follower.html.j2
@@ -155,7 +155,7 @@
                 <tr>
                     <td colspan="3" width="660" height="24" align="center" valign="middle">
                     
-                        <a href="http://www.stamped.com" style="color:#7A9CCC;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:12px;">Change your notification settings</a>
+                        <a href="http://www.stamped.com/settings/alerts" style="color:#7A9CCC;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:12px;">Change your notification settings</a>
                     </td>
                 </tr>
                 <tr>
