make available on app store tappable/clickable

--- a/sites/stamped.com/bin/www/templates/sdetail-mobile.html
+++ b/sites/stamped.com/bin/www/templates/sdetail-mobile.html
@@ -99,7 +99,7 @@
                     <div class="bottom-wave"></div>
                 </div>
                 <div class="footer">
-                    <div class="available replaced">Available on the App Store</div>
+                    <a href="http://stamped.com/download" class="available replaced">Available on the App Store</a>
                     <div class="more">
                         <span>&copy;2011 Stamped Inc.</span>
                     </div> 
