--- a/sites/stamped.com/bin/www/templates/sdetail.html
+++ b/sites/stamped.com/bin/www/templates/sdetail.html
@@ -56,7 +56,7 @@
             </div>
             <div class="wrap"> 
                 <a href="/" class="brand replaced">Stamped</a>
-                <div class="available replaced">Available on the App Store</div> 
+                <a href="http://stamped.com/download" class="available replaced">Available on the App Store</a> 
                 <div class="card"> 
                     <div class="top-wave"></div> 
                     <div class="inner"> 
