Adding 'settings_url' var to alerts templates

--- a/sites/stamped.com/bin/alerts/templates/email_favorite.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_favorite.html.j2
@@ -90,7 +90,7 @@
                 <tr>
                     <td colspan="3" width="660" height="24" align="center" valign="middle">
                     
-                        <a href="http://www.stamped.com/settings/alerts" style="color:#7A9CCC;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:12px;">Change your notification settings</a>
+                        <a href="{{ settings_url }}" style="color:#7A9CCC;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:12px;">Change your notification settings</a>
                     </td>
                 </tr>
                 <tr>
