Adding ?video=true to video playback button in invite/welcome templates

--- a/sites/stamped.com/bin/alerts/templates/email_invite.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_invite.html.j2
@@ -59,7 +59,7 @@
                                         </tr>
                                         <tr>
                                             <td width="600" height="120" align="center" valign="middle">
-                                                <a href="http://www.stamped.com"><img src="http://static.stamped.com/assets/img/email-img-video.jpg" width="236" height="126" alt="Watch the video"></a><br \><br \><br \>
+                                                <a href="http://www.stamped.com/?video=true"><img src="http://static.stamped.com/assets/img/email-img-video.jpg" width="236" height="126" alt="Watch the video"></a><br \><br \><br \>
                                             </td>
                                         </tr>
 
